@@ -1,3 +1,7 @@
+2017-01-16  Georg-Johann Lay  <avr@gjlay.de>
+
+	* config/avr/avr.h (BRANCH_COST) [reload_completed]: Increase by 4.
+
 2017-01-15  Uros Bizjak  <ubizjak@gmail.com>
 
 	* config/i386/i386.c (ix86_legitimate_combined_insn): Do not
